force-app/main/default/objects/LPCR_TablePrix__c/LPCR_TablePrix__c.object-meta.xml
<CustomObject>
    <label>Table de prix</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Table de Prix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tables de prix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>