force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_BaremePrix__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BaremePrix__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Barème de prix</label>
    <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
    <relationshipLabel>Tables de prix</relationshipLabel>
    <relationshipName>Tables_de_prix</relationshipName>
    <type>Lookup</type>
</CustomField>