force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_BorneInf__c.field-meta.xml
<CustomField>
    <fullName>LPCR_BorneInf__c</fullName>
    <label>Borne Inférieure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>