force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_CodeProduit__c.field-meta.xml
<CustomField>
    <fullName>LPCR_CodeProduit__c</fullName>
    <formula>LPCR_Produit__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code du produit</label>
    <type>Text</type>
</CustomField>