force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_JoursSemaine__c.field-meta.xml
<CustomField>
    <fullName>LPCR_JoursSemaine__c</fullName>
    <label>Jours par semaine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_JoursSemaine</valueSetName>
    </valueSet>
</CustomField>