force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_MasterDevis__c.field-meta.xml
<CustomField>
    <fullName>LPCR_MasterDevis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrat Cadre</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Tables de prix</relationshipLabel>
    <relationshipName>Tables_de_prix</relationshipName>
    <type>Lookup</type>
</CustomField>