force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_Prix__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Prix__c</fullName>
    <label>Prix</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>