force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_Produit__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Tables de prix</relationshipLabel>
    <relationshipName>Tables_de_prix</relationshipName>
    <type>Lookup</type>
</CustomField>