force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_Region__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Region__c</fullName>
    <label>Région</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_Region</valueSetName>
    </valueSet>
</CustomField>