force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_Tranche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Tranche__c</fullName>
    <label>Tranche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrancheALSH</valueSetName>
    </valueSet>
</CustomField>