force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_TypeAccueil__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeAccueil__c</fullName>
    <label>Type d&#39;accueil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypedaccueilALSH</valueSetName>
    </valueSet>
</CustomField>