force-app/main/default/objects/LPCR_TablePrix__c/fields/LPCR_Unique__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Unique__c</fullName>
    <label>Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>