force-app/main/default/objects/LPCR_TablePrix__c/recordTypes/ALSH.recordType-meta.xml
<RecordType>
    <fullName>ALSH</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement pour les prix de l&apos;ALSH.</description>
    <label>ALSH</label>
</RecordType>