force-app/main/default/objects/LPCR_TablePrix__c/recordTypes/B2B.recordType-meta.xml
<RecordType>
    <fullName>B2B</fullName>
    <active>true</active>
    <description>Type d&#39;enregistrement pour les prix des berceaux réservataires.</description>
    <label>B2B</label>
</RecordType>