force-app/main/default/objects/LPCR_TablePrix__c/recordTypes/LPCR_ReferencementApprouve.recordType-meta.xml
<RecordType>
    <fullName>LPCR_ReferencementApprouve</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement pour les prix des berceaux de référencement approuvés.</description>
    <label>Référencement Approuvé</label>
</RecordType>