force-app/main/default/objects/LPCR_TablePrix__c/recordTypes/Micro.recordType-meta.xml
<RecordType>
    <fullName>Micro</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement pour les prix des berceaux Micro.</description>
    <label>Micro</label>
</RecordType>