force-app/main/default/objects/LPCR_TablePrix__c/recordTypes/Referencement.recordType-meta.xml
<RecordType>
    <fullName>Referencement</fullName>
    <active>true</active>
    <label>Référencement</label>
</RecordType>