force-app/main/default/objects/LPCR_TablePrix__c/recordTypes/Reservataire.recordType-meta.xml
<RecordType>
    <fullName>Reservataire</fullName>
    <active>true</active>
    <description>Type d&apos;enregistrement pour les prix des berceaux réservataires.</description>
    <label>Réservataire</label>
</RecordType>