force-app/main/default/objects/LPCR_TablePrix__c/listViews/AccueilLoisirssansHebergement.listView-meta.xml
<ListView>
    <fullName>AccueilLoisirssansHebergement</fullName>
    <columns>NAME</columns>
    <columns>LPCR_Tranche__c</columns>
    <columns>LPCR_TypeAccueil__c</columns>
    <columns>LPCR_Prix__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LPCR_Produit__c</field>
        <operation>equals</operation>
        <value>Accueil Loisirs sans Hébergement</value>
    </filters>
    <label>Accueil Loisirs sans Hébergement</label>
</ListView>