force-app/main/default/objects/LPCR_TablePrix__c/listViews/BerceauxMicroSponsorises.listView-meta.xml
<ListView>
    <fullName>BerceauxMicroSponsorises</fullName>
    <columns>NAME</columns>
    <columns>LPCR_JoursSemaine__c</columns>
    <columns>LPCR_Region__c</columns>
    <columns>LPCR_Prix__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LPCR_Produit__c</field>
        <operation>equals</operation>
        <value>Berceau Micro Sponsorisé</value>
    </filters>
    <label>Berceaux Micro Sponsorisés</label>
</ListView>