force-app/main/default/objects/LPCR_TablePrix__c/listViews/BerceauxReservataires.listView-meta.xml
<ListView>
    <fullName>BerceauxReservataires</fullName>
    <columns>NAME</columns>
    <columns>LPCR_BaremePrix__c</columns>
    <columns>LPCR_Region__c</columns>
    <columns>LPCR_TypeEntreprise__c</columns>
    <columns>LPCR_Prix__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LPCR_Produit__c</field>
        <operation>equals</operation>
        <value>Berceau Réservataire</value>
    </filters>
    <label>Berceaux Réservataires</label>
</ListView>