force-app/main/default/objects/LPCR_TablePrix__c/listViews/LPCR_BerceauxReferencement.listView-meta.xml
<ListView>
    <fullName>LPCR_BerceauxReferencement</fullName>
    <columns>NAME</columns>
    <columns>LPCR_Produit__c</columns>
    <columns>LPCR_MasterDevis__c</columns>
    <columns>LPCR_Region__c</columns>
    <columns>LPCR_BorneInf__c</columns>
    <columns>LPCR_BorneSup__c</columns>
    <columns>LPCR_Prix__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LPCR_MasterDevis__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Berceaux Référencement</label>
</ListView>